--- a/src/components/Footer.module.css
+++ b/src/components/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
-  height: 5vh;
-  background-color: #800870;
+  height: 10vh;
+  background-color: #662d91;
   color: #fff;
   text-align: center;
   display: flex;
