--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -2,9 +2,9 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background: #800870;
+  background: #662d91;
   color: #fff;
-  height: 5vh;
+  height: 10vh;
 }
 
 .nav {
