--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -6,32 +6,36 @@
   padding: 0.5rem 0;
 }
 
-.choose {
+.firstBox {
   border: 1px solid #662d91;
 }
 
-.description {
-  border: 1px solid #662d91;
-  padding: 1rem;
-}
-
-.title {
+.firstBoxTitle {
   color: #662d91;
   text-align: center;
   margin: 1rem;
 }
 
-.total {
+.secondBox {
+  border: 1px solid #662d91;
+  padding: 1rem;
+}
+
+.secondBoxTitle {
+  margin-bottom: 1rem;
+}
+
+.secondBoxSubtitle {
   margin-bottom: 0.5rem;
   text-align: center;
 }
 
-.valor {
+.secondBoxTotal {
   font-size: 2rem;
   text-align: center;
 }
 
-.btn {
+.secondBoxBtn {
   display: block;
   font-size: 1.5rem;
   margin: 2rem auto 0;
@@ -39,8 +43,4 @@
   border-radius: 0.25rem;
   background: #662d91;
   color: #fff;
-}
-
-.titleDescription {
-  margin-bottom: 1rem;
 }
