--- a/src/components/Home/IncrementList.module.css
+++ b/src/components/Home/IncrementList.module.css
@@ -1,4 +1,4 @@
-.additional {
+.container {
   display: flex;
   flex-wrap: wrap;
   gap: 1rem;
@@ -6,7 +6,7 @@
   justify-content: center;
 }
 
-.additional li {
+.container li {
   flex: 1 0 160px;
   max-width: 200px;
   padding: 1rem;
