--- a/src/components/Home/SizeList.module.css
+++ b/src/components/Home/SizeList.module.css
@@ -1,10 +1,10 @@
-.size {
+.container {
   display: flex;
   gap: 0.5rem;
   margin: 0 1rem;
 }
 
-.size li {
+.container li {
   flex: 1;
   border: 1px solid #662d91;
   text-align: center;
