--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -11,7 +11,7 @@
 }
 
 .firstBoxTitle {
-  color: #333;
+  color: #000;
   text-align: center;
   margin: 1rem;
 }
@@ -19,26 +19,29 @@
 .secondBox {
   border: 1px solid #662d91;
   padding: 1rem;
+  display: flex;
+  flex-direction: column;
 }
 
 .secondBoxTitle {
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .secondBoxSubtitle {
-  margin-bottom: 0.5rem;
   text-align: center;
+  margin-bottom: 0.25rem;
 }
 
 .secondBoxTotal {
   font-size: 2rem;
   text-align: center;
+  margin-bottom: 1rem;
 }
 
 .secondBoxBtn {
   display: block;
   font-size: 1.5rem;
-  margin: 2rem auto 0;
+  margin: 0 auto 0;
   padding: 0.5rem 1rem;
   border-radius: 0.25rem;
   background: #662d91;
