--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -27,13 +27,13 @@
   margin-bottom: 0.5rem;
 }
 
-.secondBoxSubtitle {
+.totalTitle {
   text-align: center;
   margin-top: 1rem;
   margin-bottom: 0.25rem;
 }
 
-.secondBoxTotal {
+.totalValue {
   font-size: 2rem;
   text-align: center;
   margin-bottom: 1rem;
