--- a/src/components/Home.module.css
+++ b/src/components/Home.module.css
@@ -1,50 +1,3 @@
-.home {
-  min-height: 80vh;
-  display: grid;
-  grid-template-columns: 2.2fr 0.8fr;
-  gap: 0.5rem;
-  padding: 0.5rem 0;
-}
-
-.firstBox {
-  border: 1px solid #662d91;
-}
-
-.firstBoxTitle {
-  color: #000;
-  text-align: center;
-  margin: 1rem;
-}
-
-.secondBox {
-  border: 1px solid #662d91;
-  padding: 1rem;
-  display: flex;
-  flex-direction: column;
-}
-
-.secondBoxTitle {
-  margin-bottom: 0.5rem;
-}
-
-.totalTitle {
-  text-align: center;
-  margin-top: 1rem;
-  margin-bottom: 0.25rem;
-}
-
-.totalValue {
-  font-size: 2rem;
-  text-align: center;
-  margin-bottom: 1rem;
-}
-
-.secondBoxBtn {
-  display: block;
-  font-size: 1.5rem;
-  margin: 0 auto 0;
-  padding: 0.5rem 1rem;
-  border-radius: 0.25rem;
-  background: #662d91;
-  color: #fff;
+.container {
+  height: 80vh;
 }
