--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,19 @@
+:root {
+  --primary-color: #56297f;
+  --secondary-color: rgb(2, 129, 2);
+  --secondary-color-hover: rgb(23, 199, 23);
+  --color-error: rgb(255, 22, 22);
+}
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
+}
+
+body {
+  background: #fff;
 }
 
 li {
