--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -20,15 +20,10 @@
   gap: 1rem;
 }
 
-.nav li {
-  font-weight: bold;
-}
-
 .nav a {
-  font-weight: bold;
   color: #fff;
 }
 
 .nav a.active {
-  color: red;
+  color: var(--secondary-color-hover);
 }
