--- a/src/components/OrderManager/Card/Card.module.css
+++ b/src/components/OrderManager/Card/Card.module.css
@@ -18,7 +18,7 @@
 }
 
 .delete {
-  background: url("../../Assets/trash-bin.png") no-repeat center;
+  background: url("../../../Assets/trash-bin.png") no-repeat center;
   border: none;
   background-size: 24px 24px;
   width: 24px;
