--- a/src/components/OrderManager/OrderManager.module.css
+++ b/src/components/OrderManager/OrderManager.module.css
@@ -96,3 +96,18 @@
   font-size: 1rem;
   margin-top: 1rem;
 }
+
+@media (max-width: 740px) {
+  .card {
+    width: 170px;
+    min-height: 300px;
+    box-shadow: 2px 2px 4px 0 #d7acff;
+    border: 1px solid #ddd;
+    padding: 0.5rem;
+    background: #eee;
+    border-radius: 8px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
