--- a/src/components/Header.module.css
+++ b/src/components/Header.module.css
@@ -22,6 +22,31 @@
 
 .nav a {
   color: #fff;
+  position: relative;
+}
+
+.nav a:hover:after {
+  content: "";
+  width: 50px;
+  height: 2px;
+  background: #fff;
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  animation: hov 1s forwards;
+}
+
+.nav a.active:hover:after {
+  background: var(--secondary-color-hover);
+}
+
+@keyframes hov {
+  from {
+    width: 0;
+  }
+  to {
+    width: 40;
+  }
 }
 
 .nav a.active {
