--- a/src/components/NewItem/NewItem.module.css
+++ b/src/components/NewItem/NewItem.module.css
@@ -1,4 +1,4 @@
-.home {
+.container {
   min-height: 80vh;
   display: grid;
   grid-template-columns: 2.2fr 0.8fr;
@@ -40,20 +40,6 @@
   margin-bottom: 1rem;
 }
 
-.secondBoxBtn {
-  display: block;
-  margin: 0 auto;
-  padding: 1rem 2rem;
-  font-size: 1.5rem;
-  border-radius: 8px;
-  background: var(--secondary-color);
-  color: white;
-  border: none;
-  border: 1px solid #555;
-  box-shadow: 2px 2px 0 2px #bbb;
-  cursor: pointer;
-}
-
 .error {
   display: block;
   text-align: center;
@@ -65,7 +51,7 @@
 }
 
 @media (max-width: 804px) {
-  .home {
+  .container {
     display: grid;
     grid-template-columns: 1fr;
     gap: 0.5rem;
